--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">g9_cs1097_aecook1</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_main">TankClientActivity</string>
 </resources>
