--- a/g9_cs1097_aecook1/app/src/main/res/values/strings.xml
+++ b/g9_cs1097_aecook1/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">TankClientActivity</string>
     <string name="title_activity_home_screen">HomeScreen</string>
+    <string name="title_activity_replay">ReplayActivity</string>
 </resources>
